# SOW_Practical

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
backend/: config.py  database.py  projects_db.json
backend/services/: jira_service.py  llm_service.py
