[project]
name = "sow-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "groq>=1.4.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
